# Zyra

./: .gitignore  Makefile  README.md  start_groq_demo.sh  test_groq_integration.py
agent/: .env  agent.py  config.example.env  icp_client.py  main.py  models.py  private_keys.json  protocols.py  requirements.txt  test_icp_integration.py  utils.py
api/: ai_service.py  app.py  requirements.txt
data/: farmers.csv  incidents.json  seed_incidents.json
demo/: demo_script.md
frontend/: package-lock.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/report/: page.tsx
frontend/components/: ai-chat.tsx  ai-report-form.tsx  analytics-widgets.tsx  location-demo.tsx  location-selector.tsx  navigation.tsx  notification-center.tsx
frontend/lib/: api.ts
icp/: Cargo.toml  dfx.json
icp/src/: candid.did  lib.rs  types.rs
scripts/: cli.py  list_incidents.py  load_seed.py  query_lga.py  test_acceptance.py
